# Spotmicro-Robot

./: README.md
degree_msg_interface/: CMakeLists.txt  package.xml
degree_msg_interface/msg/: JointAngle.msg
servo_controller_srv_interface/: CMakeLists.txt  package.xml
servo_controller_srv_interface/srv/: JointAngle.srv
spotmicro_pkg/: package.xml  setup.cfg  setup.py
spotmicro_pkg/spotmicro_pkg/communication/: communication.py  main.py
spotmicro_pkg/spotmicro_pkg/motion_control/: main.py  motion_control.py  servo_controller.py
spotmicro_pkg/spotmicro_pkg/motion_simulation/: main.py  motion_simulation.py
spotmicro_pkg/spotmicro_pkg/robot_class/: controller.py  imu.py  kinematics.py  simulation.py  spotmicroai.py  trotting_gait.py
spotmicro_pkg/spotmicro_pkg/sensor/: imu_node.py
