<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spotmicro_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="park@todo.todo">park</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msg</depend>
  <depend>degree_msg_interface</depend>
  <depend>numpy</depend>
  <depend>math</depend>
  <depend>time</depend>
  <depend>adafruit_pca9685</depend>
  <depend>adafruit_motor</depend>
  <depend>board</depend>
  <depend>busio</depend>
  <depend>enum</depend>
  <depend>mpl_toolkits</depend>
  <depend>matplotlib</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
